http://code.google.com/p/bimserver/issues/detail?id=203